<resources>
    <string name="app_name">Go_Up</string>

    <!-- URL-->
    <string name="login_url">http://192.168.137.1/login.php</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="remember">Remember me</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_timer">timer</string>
    <string name="title_linechart">line</string>
    <string name="title_piechart">pie</string>
    <string name="title_person">me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
